Создан новый класс, в него перенесена проверка на инициализацию и готовность менеджеров к работе после вызова методов get класса Menegers